# 221-computer-graphics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
docs/: Assignment-2022-2023-HK1.doc  Lab 2.doc  Lab 3.doc  Lab 4.doc  Lab 5.doc  Phieuchamdiem.xls
mesh/: CMakeLists.txt
mesh/include/: cuboid.h  cuboid.hpp  cylinder.h  cylinder.hpp  hollow_box.h  hollow_box.hpp  hollow_cylinder.h  hollow_cylinder.hpp  mesh.h  mesh.hpp  pointed_cylinder.h  pointed_cylinder.hpp  slid.h  tbox.h  tbox.hpp  tetrahedron.h  tetrahedron.hpp  ubox.h  ubox.hpp
mesh/src/: cuboid.cpp  cylinder.cpp  hollow_box.cpp  hollow_cylinder.cpp  mesh.cpp  pointed_cylinder.cpp  slid.cpp  tbox.cpp  tetrahedron.cpp  ubox.cpp
scene/: CMakeLists.txt
scene/include/: event.hpp  scene.hpp
scene/src/: camera.cpp  event.cpp  object.cpp  scene.cpp
supportclasses/: CMakeLists.txt
supportclasses/include/: color3.hpp  point2.h  point3.h  point3.hpp  rect.h  rect.hpp  vector3.hpp
supportclasses/src/: color3.cpp  point2.cpp  point3.cpp  rect.cpp  vector3.cpp
